--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,21 @@
 [package]
-name = "debug_print"
-version = "1.0.0"
-authors = ["RustyNixiTube"]
-edition = "2018"
+name = "dprint"
+version = "0.1.0"
+authors = ["wcampbell0x2a", "RustyNixiTube"]
+edition = "2021"
 description = "print only in debug build"
-documentation = "https://docs.rs/debug_print"
+documentation = "https://docs.rs/dprint"
 readme = "README.md"
-repository = "https://github.com/RustyNixieTube/debug_print"
+repository = "https://github.com/wcampbell0x2a/dprint"
 license = "MIT/Apache-2.0"
 keywords = ["debug", "print"]
 categories = ["development-tools", "development-tools::debugging"]
-publish = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 
+[features]
+default = ["std"]
+std = []
+replace = []
